// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BaseButton /> should announce button loading accessibilityLabel 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Toggle loading
      </div>
    </div>
  </button>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 iGwUUe"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx fFtMYd"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx"
        data-blade-component="spinner"
      >
        <div
          aria-label="Loading"
          class="BaseBox-bmPWx fSbYvl"
          data-blade-component="base-box"
          role="progressbar"
        >
          <div
            class="BaseBox-bmPWx SpinningBoxweb__SpinningBox-zswieh-0  lkFZfN"
            data-blade-component="base-box"
          >
            <svg
              aria-hidden="true"
              class="Svgweb__StyledSvg-vcmjs8-0"
              data-blade-component="icon"
              fill="none"
              height="20px"
              viewBox="0 0 24 24"
              width="20px"
            >
              <path
                d="M24 12C24 18.6274 18.6274 24 12 24C5.37258 24 0 18.6274 0 12C0 5.37258 5.37258 0 12 0C18.6274 0 24 5.37258 24 12ZM3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3C7.02944 3 3 7.02944 3 12Z"
                data-blade-component="svg-path"
                fill="hsla(217, 18%, 45%, 1)"
                fill-opacity="0.2"
              />
              <path
                d="M24 12C24 13.8937 23.5518 15.7606 22.6921 17.4479C21.8324 19.1352 20.5855 20.5951 19.0534 21.7082C17.5214 22.8213 15.7476 23.556 13.8772 23.8523C12.0068 24.1485 10.0928 23.9979 8.29181 23.4127L9.21886 20.5595C10.5696 20.9984 12.0051 21.1114 13.4079 20.8892C14.8107 20.667 16.141 20.116 17.2901 19.2812C18.4391 18.4463 19.3743 17.3514 20.0191 16.0859C20.6639 14.8204 21 13.4203 21 12H24Z"
                data-blade-component="svg-path"
                fill="hsla(217, 18%, 45%, 1)"
              />
              <path
                d="M-1.33514e-05 12C-1.33514e-05 10.1063 0.448176 8.23944 1.30791 6.55211C2.16764 4.86479 3.41451 3.4049 4.94656 2.2918C6.47862 1.17869 8.25236 0.443983 10.1228 0.147739C11.9932 -0.148504 13.9072 0.00212896 15.7082 0.587322L14.7811 3.44049C13.4304 3.0016 11.9949 2.88862 10.5921 3.11081C9.18927 3.33299 7.85896 3.88402 6.70992 4.71885C5.56088 5.55367 4.62573 6.64859 3.98093 7.91409C3.33613 9.17958 2.99999 10.5797 2.99999 12H-1.33514e-05Z"
                data-blade-component="svg-path"
                fill="hsla(217, 18%, 45%, 1)"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK kRGlLV"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO dzRbbh"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with default properties 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with full width 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 fcmfVa"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon with default iconPosition 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx eqKXGg"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            clip-rule="evenodd"
            d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
            data-blade-component="svg-path"
            fill="hsla(0, 0%, 100%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon with left iconPosition 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx eqKXGg"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            clip-rule="evenodd"
            d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
            data-blade-component="svg-path"
            fill="hsla(0, 0%, 100%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon with right iconPosition 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
      <div
        class="BaseBox-bmPWx ifNopb"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="16px"
          viewBox="0 0 24 24"
          width="16px"
        >
          <path
            clip-rule="evenodd"
            d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
            data-blade-component="svg-path"
            fill="hsla(0, 0%, 100%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render button with icon without text 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 cWYdl"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx exgaAZ"
        data-blade-component="base-box"
      >
        <svg
          aria-hidden="true"
          class="Svgweb__StyledSvg-vcmjs8-0"
          data-blade-component="icon"
          fill="none"
          height="20px"
          viewBox="0 0 24 24"
          width="20px"
        >
          <path
            clip-rule="evenodd"
            d="M3 3C1.34315 3 0 4.34315 0 6V18C0 19.6569 1.34314 21 3 21H21C22.6569 21 24 19.6569 24 18V6C24 4.34315 22.6569 3 21 3H3ZM22 9V6C22 5.44771 21.5523 5 21 5H3C2.44772 5 2 5.44772 2 6V9H22ZM2 11H22V18C22 18.5523 21.5523 19 21 19H3C2.44772 19 2 18.5523 2 18V11Z"
            data-blade-component="svg-path"
            fill="hsla(0, 0%, 100%, 1)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 iGwUUe"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO dzRbbh"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled information intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dbwNMu"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO eEEhbK"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled information intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 rUuSm"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO eROscv"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled negative intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 jQhsxW"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO fKEVqu"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled negative intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 hRAmZG"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO ddJFxh"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled neutral intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 gEdzFG"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO enkXnB"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled neutral intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 bUvlW"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO hCQBXD"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled notice intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 gVQePO"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO hycSZy"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled notice intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 gHWJDO"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO hGsdzb"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled positive intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 bqbopq"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO bqbpSL"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled positive intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 eqYoWC"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO cOjDPV"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled secondary variant button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kSnCRa"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO iNDstP"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render disabled tertiary variant button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 jfsdry"
    data-blade-component="button"
    disabled=""
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO iNDstP"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render information intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 etPkaL"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO bJpkHL"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render information intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 kGhQV"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO eaVJWH"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render large size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dtddRc"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO bAmYDf"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render medium size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 dOlUqh"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO brGLEM"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render negative intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 iZEnpY"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO cdUsfm"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render negative intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 djkbnZ"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO kWfFXC"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render neutral intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 ja-dInP"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO bqqtcZ"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render neutral intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 evmJix"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO JLrM"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render notice intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 jrOozr"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO dlTfWY"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render notice intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 iJAnhR"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO jPAiLT"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render positive intent high contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 fbdpFe"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO gJJLkF"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render positive intent low contrast button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 gdvQbt"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO iUpFH"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render secondary variant button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 hCIUbu"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO jSaisz"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render small size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 hArgmt"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO doZDfl"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render tertiary variant button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 jWAQNB"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO kUkoRf"
        data-blade-component="base-text"
      >
        Pay Now
      </div>
    </div>
  </button>
</div>
`;

exports[`<BaseButton /> should render xsmall size button 1`] = `
<div>
  <button
    class="StyledBaseButtonweb__StyledBaseButton-sc-26bt38-0 cFaFfu"
    data-blade-component="button"
    role="button"
    type="button"
  >
    <div
      class="BaseBox-bmPWx BaseButton__ButtonContent-zf1huq-0 kkGTK NIPoA"
      data-blade-component="base-box"
    >
      <div
        class="StyledBaseText-dVBfTO doZDfl"
        data-blade-component="base-text"
      >
        PAY NOW
      </div>
    </div>
  </button>
</div>
`;
